--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -17,7 +17,7 @@
                 {% if site.data.menu %}
                     {% for item in site.data.menu %}
                         <li>
-                            <a class="page-scroll2" href="{{ item.link }}">{{ item.name }}</a>
+                            <a class="page-scroll2" href="{{ item.link }}" style="color:white">{{ item.name }}</a>
                         </li>
                     {% endfor %}
                 {% else %}
