--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -26,7 +26,7 @@
                             {% if block.name == page_block %}
                                 {% unless block.menu_exclude %}
                                     <li>
-                                        <a class="page-scroll2" href="#{{ block.name }}">
+                                        <a class="page-scroll2" href="#{{ block.name }}" style="color:white">
                                             {% if block.menu_txt %}
                                                 {{ menu_txt }}
                                             {% else %}
